Fixed alignment and increased card height

--- a/css/index.css
+++ b/css/index.css
@@ -123,7 +123,7 @@
 */
 
 .team-member-card-container {
-	height: 700px;
+	height: 570px;
 	width: 320px;
 	display: inline-block;
 	margin-right: 10px;
@@ -157,8 +157,9 @@
 	z-index: 0;
 	top: 100px;
 	width: 100%;
-	height: 700px;
+	height: 570px;
 	display: inline-block;
+	vertical-align: top;
 	border-radius: 2px 2px 2px 2px;
 	-moz-border-radius: 2px 2px 2px 2px;
 	-webkit-border-radius: 2px 2px 2px 2px;
